--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,10 @@
 backend:
   name: git-gateway
 
+slug:
+  encoding: "ascii"
+  clean_accents: true
+
 media_folder: "static/images/uploads"
 public_folder: "/images/uploads"
 
