--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
     "svelte": "^3.17.3",
+    "svelte-preprocess": "^4.5.2",
     "uuid": "^8.3.1"
   },
   "husky": {
