--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "@rollup/plugin-url": "^5.0.0",
+    "@sindresorhus/slugify": "^1.1.0",
     "husky": "^4.3.0",
     "mkdirp": "^1.0.4",
     "rollup": "^2.3.4",
