--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
     "svelte": "^3.17.3",
+    "svelte-canvas": "^0.6.1",
     "svelte-popover": "^2.0.8",
     "svelte-preprocess": "^4.5.2",
     "uuid": "^8.3.1"
