--- a/package.json
+++ b/package.json
@@ -10,36 +10,37 @@
   },
   "dependencies": {
     "compression": "^1.7.1",
-    "polka": "next",
-    "sirv": "^1.0.0"
+    "polka": "^1.0.0-next.15",
+    "sirv": "^1.0.12",
+    "sql.js": "^1.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.14.6",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@rollup/plugin-babel": "^5.0.0",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/runtime": "^7.14.6",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
+    "@rollup/plugin-replace": "^2.4.2",
     "@rollup/plugin-url": "^5.0.0",
-    "@sindresorhus/slugify": "^1.1.0",
-    "d3-array": "^2.8.0",
-    "d3-scale": "^3.2.3",
-    "husky": "^4.3.0",
+    "@sindresorhus/slugify": "^1.1.2",
+    "d3-array": "^2.12.1",
+    "d3-scale": "^3.3.0",
+    "husky": "^4.3.8",
     "mkdirp": "^1.0.4",
-    "rollup": "^2.3.4",
-    "rollup-plugin-svelte": "^6.0.0",
+    "rollup": "^2.53.2",
+    "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
-    "svelte": "^3.17.3",
+    "svelte": "^3.38.3",
     "svelte-canvas": "^0.6.1",
     "svelte-popover": "^2.0.8",
-    "svelte-preprocess": "^4.5.2",
-    "svelte-select": "^3.14.1",
-    "uuid": "^8.3.1"
+    "svelte-preprocess": "^4.7.4",
+    "svelte-select": "^3.17.0",
+    "uuid": "^8.3.2"
   },
   "husky": {
     "hooks": {
