--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
+		"sql.js": "^1.5.0",
     "svelte": "^3.38.3",
     "svelte-canvas": "^0.6.1",
     "svelte-popover": "^2.0.8",
