--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^7.0.0",
     "sapper": "^0.28.0",
-		"sql.js": "^1.5.0",
+    "sql.js": "^1.5.0",
     "svelte": "^3.38.3",
     "svelte-canvas": "^0.6.1",
+    "svelte-frappe-charts": "^1.8.4",
     "svelte-popover": "^2.0.8",
     "svelte-preprocess": "^4.7.4",
     "svelte-select": "^3.17.0",
