--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "d3-array": "^2.12.1",
     "d3-scale": "^3.3.0",
     "husky": "^4.3.8",
+    "localforage": "^1.10.0",
     "mkdirp": "^1.0.4",
     "rollup": "^2.53.2",
     "rollup-plugin-svelte": "^6.1.1",
