--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
+    "@popperjs/core": "^2.10.1",
     "@sindresorhus/slugify": "^2.1.0",
     "@sveltejs/adapter-static": "^1.0.0-next.19",
     "@sveltejs/kit": "next",
     "localforage": "^1.10.0",
     "svelte": "^3.34.0",
     "svelte-canvas": "^0.7.0",
+    "svelte-frappe-charts": "^1.9.0",
     "svelte-select": "^4.4.3"
   },
   "type": "module",
