--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@sveltejs/adapter-static": "^1.0.0-next.19",
     "@sveltejs/kit": "next",
     "localforage": "^1.10.0",
+    "mkdirp": "^1.0.4",
+    "sql.js": "^1.6.2",
     "svelte": "^3.34.0",
     "svelte-canvas": "^0.7.0",
     "svelte-frappe-charts": "^1.9.0",
